<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <!--  <item-->
  <!--    android:id="@+id/header"-->
  <!--    android:title=""-->
  <!--    app:actionLayout="@layout/navigate_header" />-->


  <group
    android:id="@+id/group1"
    android:checkableBehavior="single">
    <item
      android:id="@+id/change_password_fragment"
      android:icon="@drawable/ic_settings"
      android:title="@string/change_password" />
  </group>
  <group
    android:id="@+id/group2"
    android:checkableBehavior="single">
    <item
      android:id="@+id/clients_fragment"
      android:icon="@drawable/ic_more_members"
      android:title="@string/members" />
  </group>
  <group
    android:id="@+id/group3"
    android:checkableBehavior="single">
    <item
      android:id="@+id/agents_fragment"
      android:icon="@drawable/ic_more_members"
      android:title="@string/agents" />
  </group>
  <group
    android:id="@+id/group4"
    android:checkableBehavior="single">
    <item
      android:id="@+id/customer_services"
      android:icon="@drawable/ic_support_agent"
      android:title="@string/customer_service" />
  </group>
  <group
    android:id="@+id/group5"
    android:checkableBehavior="single">
    <item
      android:id="@+id/login_fragment"
      android:icon="@drawable/ic_logout"
      android:title="@string/login" />
  </group>
  <group
    android:id="@+id/group6"
    android:checkableBehavior="single">
    <item
      android:id="@+id/logout"
      android:icon="@drawable/ic_logout"
      android:title="@string/log_out" />
  </group>
  <group
    android:id="@+id/group7"
    android:checkableBehavior="single">
    <item
      android:id="@+id/center_fragment"
      android:icon="@drawable/ic_business_center"
      android:title="@string/center_data_update" />
  </group>
  <group
    android:id="@+id/group8"
    android:checkableBehavior="single">
    <item
      android:id="@+id/contact_fragment"
      android:icon="@drawable/ic_more_contact"
      android:title="@string/contact_us" />
  </group>
  <group
    android:id="@+id/group9"
    android:checkableBehavior="single">
    <item
      android:id="@+id/about_fragment"
      android:icon="@drawable/ic_more_admin_support"
      android:title="@string/about" />
  </group>
  <group
    android:id="@+id/group10"
    android:checkableBehavior="single">
    <item
      android:id="@+id/suggestions_fragment"
      android:icon="@drawable/ic_more_terms"
      android:title="@string/suggest" />
  </group>
  <group
    android:id="@+id/group13"
    android:checkableBehavior="single">
    <item
      android:id="@+id/language"
      android:icon="@drawable/ic_language"
      android:title="@string/language" />
  </group>
  <group
    android:id="@+id/group11"
    android:checkableBehavior="single">
    <item
      android:id="@+id/share_app"
      android:icon="@drawable/ic_more_share"
      android:title="@string/share" />
  </group>
  <group
    android:id="@+id/group12"
    android:checkableBehavior="single">
    <item
      android:id="@+id/rate_app"
      android:icon="@drawable/ic_more_rate"
      android:title="@string/rate" />
  </group>

  <item
    android:id="@+id/tes"
    android:title=""
    app:actionLayout="@layout/tes" />


</menu>