<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="grand.app.moon.views.fragments.SplashFragment">

  <data>

    <import type="app.te.lima_zola.presentation.base.utils.Constants" />

    <variable
      name="eventListener"
      type="app.te.lima_zola.presentation.suggestions.EventListeners" />

    <variable
      name="contactRequest"
      type="app.te.lima_zola.domain.settings.models.suggestions.SuggestionsRequest" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toTopOf="@id/add_cart"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          android:text="@string/suggest_title"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
          android:textColor="@color/black"
          app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/client_name"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_4sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          app:error="@{contactRequest.validation.nameError.equals(Constants.EMPTY)?@string/empty_warning:``}"
          app:errorEnabled="@{contactRequest.validation.nameError==null?false:true}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/client_name"
            android:inputType="text"
            android:text="@={contactRequest.name}"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/overlayBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/client_phone"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_4sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          app:error="@{contactRequest.validation.phoneError.equals(Constants.EMPTY)?@string/empty_warning:``}"
          app:errorEnabled="@{contactRequest.validation.phoneError==null?false:true}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/client_name">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_phone"
            android:inputType="phone"
            android:text="@={contactRequest.phone}"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/overlayBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/client_address"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_4sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          app:error="@{contactRequest.validation.addressError.equals(Constants.EMPTY)?@string/empty_warning:``}"
          app:errorEnabled="@{contactRequest.validation.addressError==null?false:true}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/client_phone">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_address"
            android:inputType="text"
            android:text="@={contactRequest.address}"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/overlayBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/client_notes"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/_4sdp"
          android:layout_marginTop="@dimen/_8sdp"
          android:layout_marginEnd="@dimen/_4sdp"
          app:error="@{contactRequest.validation.messageError.equals(Constants.EMPTY)?@string/empty_warning:``}"
          app:errorEnabled="@{contactRequest.validation.messageError==null?false:true}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/client_address">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:gravity="top"
            android:hint="@string/client_notes"
            android:inputType="text"
            android:text="@={contactRequest.message}"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/overlayBackground" />
        </com.google.android.material.textfield.TextInputLayout>

      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/add_cart"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimaryDark"
      android:onClick="@{()->eventListener.sendContact()}"
      android:text="@string/send"
      android:textAllCaps="false"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>