<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>


  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_country"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_6sdp"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_marginEnd="@dimen/_6sdp"
      app:endIconDrawable="@drawable/ic_arrow_down"
      app:endIconMode="custom"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/country_hint"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/overlayBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_gov"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_6sdp"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_marginEnd="@dimen/_6sdp"
      android:visibility="gone"
      app:endIconDrawable="@drawable/ic_arrow_down"
      app:endIconMode="custom"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/input_country">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/gov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/gov_hint"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/overlayBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/input_city"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_6sdp"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_marginEnd="@dimen/_6sdp"
      android:visibility="gone"
      app:endIconDrawable="@drawable/ic_arrow_down"
      app:endIconMode="custom"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/input_gov">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/overlayBackground" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rc_products"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/_4sdp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintTop_toBottomOf="@id/input_city" />

    <!--        <com.airbnb.lottie.LottieAnimationView-->
    <!--            android:id="@+id/pb_base_loading_bar"-->
    <!--            android:layout_width="@dimen/dp100w"-->
    <!--            android:layout_height="@dimen/dp100h"-->
    <!--            android:visibility="@{viewmodel.agentsAdapter.itemCount==0?View.VISIBLE:View.GONE,default=gone}"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:lottie_autoPlay="true"-->
    <!--            app:lottie_fileName="empt.json"-->
    <!--            app:lottie_loop="true" />-->
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>